// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should render a specific container for link 1`] = `
<Tag__TagContainer
  as="span"
  className="tag"
  href="#"
>
  <Tag__TagIcon
    className="cap cap-icon"
  />
  Label
</Tag__TagContainer>
`;

exports[`<Tag /> should render an icon if defined 1`] = `
<Tag__TagContainer
  className="tag"
>
  <Tag__TagIcon
    className="cap cap-icon"
  />
  Label
</Tag__TagContainer>
`;

exports[`<Tag /> should render correctly 1`] = `
<Tag__TagContainer
  className="tag"
  id="example"
>
  Label
</Tag__TagContainer>
`;

exports[`<Tag /> should render with different html tag 1`] = `
<Tag__TagContainer
  as="span"
  className="tag"
>
  <Tag__TagIcon
    className="cap cap-icon"
  />
  Label
</Tag__TagContainer>
`;
